--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,4 @@
-REACT_APP_YOUR_API_KEY="c32d9776cac91bca875c69eb1c3a31f1"
-const apiKey = "c32d9776cac91bca875c69eb1c3a31f1"
-REACT_APP_PROJECT_ID = "watchwise-chatbot-wkji"
+REACT_APP_YOUR_API_KEY=""
 
-REACT_APP_GOOGLE_APPLICATION_CREDENTIALS="/watchwise-chatbot-wkji-1eba17c7fcf4.json"
+
+
